--- a/index.html
+++ b/index.html
@@ -8,19 +8,15 @@
 </head>
 <body>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <div id="app">
-        {{
-            text
-        }}
-    </div>
+    <div id="app"></div>
     <script>
         const vm = Vue.createApp({ 
             data(){
-
                 return {
                     text:"Hola Vue"
                 };
-            }
+            },
+            template:`<div v-text="text"></div>`
         }).mount("#app");
     </script>
 </body>
