--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
         const vm = Vue.createApp({ 
             data(){
                 return {
-                    text:'<img src="https://pbs.twimg.com/profile_images/1404443005826867200/53xs9_qN_400x400.jpg" alt=""></img>'
+                    alt:"Fotografia de un Michi",
+                    img:"https://pbs.twimg.com/profile_images/1404443005826867200/53xs9_qN_400x400.jpg",
                 };
             },
-            template:`<div v-html="text"></div>`
+            template:`<img v-bind:src="img" v-bind:alt="alt"/>`
         }).mount("#app");
     </script>
 </body>
