--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
         const vm = Vue.createApp({ 
             data(){
                 return {
-                    alt:"Fotografia de un Michi",
-                    img:"https://pbs.twimg.com/profile_images/1404443005826867200/53xs9_qN_400x400.jpg",
+                    counter: 0
                 };
             },
-            template:`<img v-bind:src="img" v-bind:alt="alt"/>`
+            methods:{
+                increment(){
+                    this.counter++;
+                }
+            },
+            template:`<button v-on:click="increment" v-on:keyup="increment">{{ counter }}</button>`
         }).mount("#app");
     </script>
 </body>
